--- a/notes/typography.css
+++ b/notes/typography.css
@@ -103,6 +103,6 @@ p {
 }
 
 /* Resources
-    - "Web Design Engineering With The New CSS | Matthis Ott | CSS Day 2024" (https://youtu.be/su6WA0kUUJE?si=tZMWImEcfTMEQLrG)
+    - "Web Design Engineering With The New CSS | Matthis Ott | CSS Day 2024" (https://youtu.be/su6WA0kUUJE?si=tZMWImEcfTMEQLrG) (https://codepen.io/matthiasott/pen/xxNVmGP)
     - Utopia (https://utopia.fyi/) - fluid responsive design
 */
